Refactor index.html and styles.css to enhance layout and styling. Added logo image with link in header, updated font styles, introduced CSS variables for colors, and improved hover effects for navigation and post cards.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <header class="site-header">
         <nav class="main-nav">
             <div class="logo">
-                <h1>NY Collective</h1>
+                <a href="/">
+                    <img src="logo/ny.c-logo.png" alt="NY Collective Logo">
+                    <h1>NY Collective</h1>
+                </a>
             </div>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
