--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <header class="site-header">
         <nav class="main-nav">
             <div class="logo">
-                <a href="/">
+                <a href="index.html">
                     <img src="logo/transparentlogo.png" alt="NY Collective Logo">
                     <h1>NY Collective</h1>
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/blog">Blog</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
