--- a/blog-posts/queens-culinary-tour.html
+++ b/blog-posts/queens-culinary-tour.html
@@ -11,25 +11,30 @@
 <body>
     <header class="site-header">
         <nav class="main-nav">
-            <div class="logo">
-                <a href="../index.html">
-                    <img src="../logo/transparentlogo.png" alt="NY Collective Logo">
-                </a>
+            <div class="nav-container">
+                <div class="logo">
+                    <a href="../index.html">
+                        <img src="../logo/transparentlogo.png" alt="NY Collective Logo">
+                    </a>
+                </div>
+                <div class="nav-menu">
+                    <ul class="nav-links">
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../about.html">About</a></li>
+                        <li><a href="../blog.html">Blog</a></li>
+                        <li><a href="../contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="nav-controls">
+                    <button class="search-toggle" aria-label="Search">
+                        <i class="fas fa-search"></i>
+                    </button>
+                    <button class="menu-toggle" aria-label="Menu">
+                        <span></span>
+                        <span></span>
+                    </button>
+                </div>
             </div>
-            <ul class="nav-links">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../about.html">About</a></li>
-                <li><a href="../blog.html">Blog</a></li>
-                <li><a href="../contact.html">Contact</a></li>
-                <li class="search-container">
-                    <form class="search-form" action="#" method="GET">
-                        <input type="search" placeholder="Search..." aria-label="Search">
-                        <button type="submit" aria-label="Submit search">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </form>
-                </li>
-            </ul>
         </nav>
     </header>
 
