--- a/contact.html
+++ b/contact.html
@@ -11,18 +11,30 @@
 <body>
     <header class="site-header">
         <nav class="main-nav">
-            <div class="logo">
-                <a href="index.html">
-                    <img src="logo/transparentlogo.png" alt="NY Collective Logo">
-                </a>
+            <div class="nav-container">
+                <div class="logo">
+                    <a href="index.html">
+                        <img src="logo/transparentlogo.png" alt="NY Collective Logo">
+                    </a>
+                </div>
+                <div class="nav-menu">
+                    <ul class="nav-links">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="nav-controls">
+                    <button class="search-toggle" aria-label="Search">
+                        <i class="fas fa-search"></i>
+                    </button>
+                    <button class="menu-toggle" aria-label="Menu">
+                        <span></span>
+                        <span></span>
+                    </button>
+                </div>
             </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><i class="fas fa-search search-icon"></i></li>
-            </ul>
         </nav>
     </header>
 
