Refactor navigation structure across multiple HTML files to streamline the layout and enhance responsiveness. Removed redundant navigation elements, updated styles for a cleaner appearance, and adjusted header height for improved usability. Enhanced JavaScript functionality for smoother scrolling and mobile navigation behavior.

--- a/index.html
+++ b/index.html
@@ -12,26 +12,25 @@
     <header class="site-header">
         <nav class="main-nav">
             <div class="nav-container">
+                <div class="nav-menu">
+                    <button class="menu-icon">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                    <div class="nav-links">
+                        <a href="blog.html">Blogs</a>
+                        <a href="newsletter.html">Newsletter</a>
+                        <a href="donate.html">Donate</a>
+                        <a href="support.html">Support</a>
+                    </div>
+                </div>
                 <div class="logo">
                     <a href="index.html">
                         <img src="logo/transparentlogo.png" alt="NY Collective Logo">
                     </a>
                 </div>
-                <div class="nav-menu">
-                    <ul class="nav-links">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="nav-controls">
-                    <button class="search-toggle" aria-label="Search">
+                <div class="nav-search">
+                    <button class="search-icon">
                         <i class="fas fa-search"></i>
-                    </button>
-                    <button class="menu-toggle" aria-label="Menu">
-                        <span></span>
-                        <span></span>
                     </button>
                 </div>
             </div>
