Refactor index.html and styles.css to improve navigation layout and visual consistency. Moved donation and support links to a new section for better organization, updated color variables for enhanced readability, and adjusted padding and margins for a cleaner design. Introduced a new brand colors file to standardize color usage across the project.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
                     <div class="nav-links">
                         <a href="blog.html">Blogs</a>
                         <a href="newsletter.html">Newsletter</a>
-                        <a href="donate.html">Donate</a>
-                        <a href="support.html">Support</a>
                     </div>
                 </div>
                 <div class="logo">
@@ -29,6 +27,10 @@
                     </a>
                 </div>
                 <div class="nav-search">
+                    <div class="nav-links">
+                        <a href="donate.html">Donate</a>
+                        <a href="support.html">Support</a>
+                    </div>
                     <button class="search-icon">
                         <i class="fas fa-search"></i>
                     </button>
