--- a/blog.html
+++ b/blog.html
@@ -12,14 +12,54 @@
     <header class="site-header">
         <nav class="main-nav">
             <div class="nav-container">
+                <div class="nav-menu">
+                    <button class="menu-icon" aria-label="Toggle Menu">
+                        <span class="hamburger-line"></span>
+                        <span class="hamburger-line"></span>
+                        <span class="hamburger-line"></span>
+                    </button>
+                    <div class="nav-links">
+                        <a href="blog.html">Blogs</a>
+                        <a href="newsletter.html">Newsletter</a>
+                    </div>
+                </div>
                 <div class="logo">
                     <a href="index.html">
                         <img src="logo/transparentlogo.png" alt="NY Collective Logo">
                     </a>
                 </div>
+                <div class="nav-search">
+                    <div class="nav-links">
+                        <a href="donate.html">Donate</a>
+                        <a href="support.html">Support</a>
+                    </div>
+                    <button class="search-icon">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
             </div>
         </nav>
     </header>
+
+    <div class="mobile-menu">
+        <div class="mobile-menu-content">
+            <a href="blog.html">Blogs</a>
+            <a href="newsletter.html">Newsletter</a>
+            <a href="donate.html">Donate</a>
+            <a href="support.html">Support</a>
+        </div>
+    </div>
+
+    <div class="search-overlay">
+        <button class="close-search">
+            <i class="fas fa-times"></i>
+        </button>
+        <div class="search-container">
+            <form class="search-form">
+                <input type="text" class="search-input" placeholder="Search stories...">
+            </form>
+        </div>
+    </div>
 
     <main class="content">
         <section class="blog-header">
