--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main class="content">
         <section class="hero">
             <h2>The New York Collective™</h2>
-            <p>NYC Stories, Events, Culture and More. Your curated guide to the city's most inspiring stories, upcoming events, and cultural phenomena. Discover the pulse of New York through our lens.</p>
+            <p>NYC Stories, Events, Culture and More.</p>
         </section>
 
         <section class="featured-posts">
