Add featured stories section to index.html and enhance styles in styles.css. Introduced multiple story cards with metadata and content, along with responsive design adjustments for improved layout and visual appeal.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,45 @@
         <section class="featured-heading">
             <h2>Featured Stories <span class="heading-arrow">↓</span></h2>
         </section>
+
+        <section class="featured-story">
+            <div class="story-card">
+                <div class="story-meta">
+                    <span class="story-date">March 15, 2024</span>
+                    <span class="story-read-time">5 min read</span>
+                </div>
+                <div class="story-content">
+                    <h3>The Hidden Gems of Brooklyn's Street Art Scene</h3>
+                    <p>Discover the vibrant world of street art that transforms Brooklyn's walls into an open-air gallery, where every corner tells a unique story.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="featured-story">
+            <div class="story-card" style="background-image: url('https://images.unsplash.com/photo-1496442226666-8d4d0e62e6e9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80');">
+                <div class="story-meta">
+                    <span class="story-date">March 12, 2024</span>
+                    <span class="story-read-time">4 min read</span>
+                </div>
+                <div class="story-content">
+                    <h3>Manhattan's Secret Rooftop Gardens</h3>
+                    <p>Explore the hidden urban oases that transform Manhattan's skyline, where nature meets architecture in perfect harmony.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="featured-story">
+            <div class="story-card" style="background-image: url('https://images.unsplash.com/photo-1522083165195-3424ed129620?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80');">
+                <div class="story-meta">
+                    <span class="story-date">March 10, 2024</span>
+                    <span class="story-read-time">6 min read</span>
+                </div>
+                <div class="story-content">
+                    <h3>The Evolution of NYC's Food Truck Culture</h3>
+                    <p>From humble beginnings to culinary innovation, witness how food trucks have become an integral part of New York's diverse food scene.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="site-footer">
