Add featured stories section to index.html with multiple story cards showcasing recent blog posts. Each card includes metadata such as date and read time, enhancing content visibility and engagement.

--- a/index.html
+++ b/index.html
@@ -100,6 +100,49 @@
         </section>
     </main>
 
+    <section class="featured-heading">
+        <h2>Blogs <span class="heading-arrow">↓</span></h2>
+    </section>
+
+    <section class="featured-story">
+        <div class="story-card" style="background-image: url('https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80');">
+            <div class="story-meta">
+                <span class="story-date">March 8, 2024</span>
+                <span class="story-read-time">7 min read</span>
+            </div>
+            <div class="story-content">
+                <h3>The Rise of Artisanal Coffee in NYC</h3>
+                <p>From hidden gems to established roasters, explore how New York's coffee scene has evolved into a craft culture of its own.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="featured-story">
+        <div class="story-card" style="background-image: url('https://images.unsplash.com/photo-1528605248644-14dd04022da1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80');">
+            <div class="story-meta">
+                <span class="story-date">March 5, 2024</span>
+                <span class="story-read-time">4 min read</span>
+            </div>
+            <div class="story-content">
+                <h3>Queens' Hidden Food Markets</h3>
+                <p>Discover the vibrant food markets of Queens where diverse cultures come together through authentic culinary experiences.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="featured-story">
+        <div class="story-card" style="background-image: url('https://images.unsplash.com/photo-1511818966892-d7d671e672a2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80');">
+            <div class="story-meta">
+                <span class="story-date">March 3, 2024</span>
+                <span class="story-read-time">6 min read</span>
+            </div>
+            <div class="story-content">
+                <h3>NYC's Underground Music Scene</h3>
+                <p>From jazz basements to indie venues, dive into the thriving underground music scene that keeps New York's cultural heartbeat alive.</p>
+            </div>
+        </div>
+    </section>
+
     <footer class="site-footer">
         <div class="footer-content">
             <div class="footer-section">
