--- a/contact.html
+++ b/contact.html
@@ -9,87 +9,83 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <header class="site-header">
-        <nav class="main-nav">
-            <div class="nav-container">
-                <div class="logo">
-                    <a href="index.html">
-                        <img src="logo/transparentlogo.png" alt="NY Collective Logo">
-                    </a>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <!-- Header will be loaded dynamically -->
+    <header class="site-header"></header>
+
+    <!-- Mobile menu will be loaded dynamically -->
+    <div class="mobile-menu"></div>
+
+    <!-- Search overlay will be loaded dynamically -->
+    <div class="search-overlay"></div>
 
     <main class="content">
-        <section class="contact-section">
-            <h2>Get in Touch</h2>
-            <p>We'd love to hear from you! Whether you have a story to share, a question to ask, or just want to say hello, feel free to reach out.</p>
-            
-            <div class="contact-grid">
-                <div class="contact-form">
-                    <form>
-                        <div class="form-group">
-                            <label for="name">Name</label>
-                            <input type="text" id="name" name="name" required>
+        <section class="hero">
+            <h2>Contact</h2>
+            <p>Get in touch with us</p>
+        </section>
+
+        <section class="contact-content">
+            <div class="container">
+                <div class="contact-grid">
+                    <div class="contact-info">
+                        <h2>Contact Information</h2>
+                        <div class="contact-details">
+                            <div class="contact-item">
+                                <h3>General Inquiries</h3>
+                                <p><a href="mailto:hello@nycollective.blog">hello@nycollective.blog</a></p>
+                            </div>
+                            <div class="contact-item">
+                                <h3>Press & Media</h3>
+                                <p><a href="mailto:press@nycollective.blog">press@nycollective.blog</a></p>
+                            </div>
+                            <div class="contact-item">
+                                <h3>Legal & Privacy</h3>
+                                <p><a href="mailto:legal@nycollective.blog">legal@nycollective.blog</a></p>
+                            </div>
+                            <div class="contact-item">
+                                <h3>Accessibility</h3>
+                                <p><a href="mailto:accessibility@nycollective.blog">accessibility@nycollective.blog</a></p>
+                            </div>
+                            <div class="contact-item">
+                                <h3>Careers</h3>
+                                <p><a href="mailto:careers@nycollective.blog">careers@nycollective.blog</a></p>
+                            </div>
+                            <div class="contact-item">
+                                <h3>Follow Us</h3>
+                                <p><a href="https://instagram.com/newyork.collective" target="_blank" rel="noopener noreferrer">@newyork.collective</a></p>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Message</label>
-                            <textarea id="message" name="message" required></textarea>
-                        </div>
-                        <button type="submit" class="submit-btn">Send Message</button>
-                    </form>
-                </div>
-                
-                <div class="contact-info">
-                    <h3>Other Ways to Connect</h3>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-twitter"></i> @NYCollective</a>
-                        <a href="#"><i class="fab fa-instagram"></i> @NYCollective</a>
-                        <a href="#"><i class="fab fa-facebook"></i> NY Collective</a>
                     </div>
-                    <div class="email-info">
-                        <p><i class="fas fa-envelope"></i> hello@nycollective.blog</p>
+
+                    <div class="contact-form">
+                        <h2>Send Us a Message</h2>
+                        <form id="contactForm" action="#" method="POST">
+                            <div class="form-group">
+                                <label for="name">Name</label>
+                                <input type="text" id="name" name="name" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" id="email" name="email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="subject">Subject</label>
+                                <input type="text" id="subject" name="subject" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea id="message" name="message" rows="5" required></textarea>
+                            </div>
+                            <button type="submit" class="submit-btn">Send Message</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-    <div class="search-overlay">
-        <button class="close-search">
-            <i class="fas fa-times"></i>
-        </button>
-        <div class="search-container">
-            <form class="search-form">
-                <input type="text" class="search-input" placeholder="Search stories...">
-            </form>
-        </div>
-    </div>
-
-    <footer class="site-footer">
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>About Us</h3>
-                <p>NY Collective is a platform for sharing stories and connecting communities.</p>
-            </div>
-            <div class="footer-section">
-                <h3>Connect</h3>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 NY Collective. All rights reserved.</p>
-        </div>
-    </footer>
+    <!-- Footer will be loaded dynamically -->
+    <footer class="site-footer"></footer>
 
     <script src="script.js"></script>
 </body>
