--- a/newsletter.html
+++ b/newsletter.html
@@ -7,6 +7,105 @@
     <link rel="icon" type="image/png" href="logo/roundlogo.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        .newsletter-container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 2rem;
+            text-align: center;
+        }
+
+        .newsletter-form {
+            background: var(--bg-light);
+            padding: 2rem;
+            border-radius: var(--border-radius);
+            box-shadow: var(--shadow);
+            margin-top: 2rem;
+        }
+
+        .form-group {
+            margin-bottom: 1.5rem;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 0.5rem;
+            color: var(--text-dark);
+            font-weight: 500;
+        }
+
+        .form-group input {
+            width: 100%;
+            padding: 0.75rem;
+            border: 1px solid var(--border-color);
+            border-radius: var(--border-radius);
+            font-size: 1rem;
+            transition: border-color 0.3s ease;
+        }
+
+        .form-group input:focus {
+            outline: none;
+            border-color: var(--primary-color);
+        }
+
+        .subscribe-btn {
+            background: var(--primary-color);
+            color: white;
+            border: none;
+            padding: 1rem 2rem;
+            border-radius: var(--border-radius);
+            font-size: 1rem;
+            font-weight: 500;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            width: 100%;
+        }
+
+        .subscribe-btn:hover {
+            background: var(--primary-dark);
+        }
+
+        .benefits {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+            margin-top: 3rem;
+        }
+
+        .benefit-item {
+            text-align: left;
+            padding: 1.5rem;
+            background: var(--bg-light);
+            border-radius: var(--border-radius);
+            box-shadow: var(--shadow);
+        }
+
+        .benefit-item i {
+            font-size: 1.5rem;
+            color: var(--primary-color);
+            margin-bottom: 1rem;
+        }
+
+        .benefit-item h3 {
+            margin-bottom: 0.5rem;
+            color: var(--text-dark);
+        }
+
+        .benefit-item p {
+            color: var(--text-light);
+            line-height: 1.6;
+        }
+
+        @media (max-width: 768px) {
+            .newsletter-container {
+                padding: 1rem;
+            }
+
+            .benefits {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
 </head>
 <body>
     <header class="site-header">
@@ -62,71 +161,48 @@
     </div>
 
     <main class="content">
-        <section class="newsletter-section">
-            <div class="newsletter-header">
-                <h1>Stay Connected with NYC</h1>
-                <p>Subscribe to our newsletter for weekly updates on New York's culture, events, and stories.</p>
-            </div>
-            
-            <div class="newsletter-form-container">
-                <form class="newsletter-form">
+        <section class="hero">
+            <h2>Stay Connected</h2>
+            <p>Subscribe to our newsletter for the latest stories and updates from NYC.</p>
+        </section>
+
+        <section class="newsletter-container">
+            <div class="newsletter-form">
+                <form id="newsletter-form">
                     <div class="form-group">
-                        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" required placeholder="Your name">
                     </div>
                     <div class="form-group">
-                        <select id="interests" name="interests" multiple>
-                            <option value="culture">Culture & Arts</option>
-                            <option value="food">Food & Dining</option>
-                            <option value="events">Events & Festivals</option>
-                            <option value="community">Community News</option>
-                            <option value="lifestyle">Lifestyle & Fashion</option>
-                        </select>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required placeholder="your@email.com">
                     </div>
-                    <button type="submit" class="subscribe-button">Subscribe Now</button>
+                    <button type="submit" class="subscribe-btn">Subscribe to Newsletter</button>
                 </form>
             </div>
 
-            <div class="newsletter-benefits">
-                <h2>What You'll Receive</h2>
-                <div class="benefits-grid">
-                    <div class="benefit-card">
-                        <i class="fas fa-newspaper"></i>
-                        <h3>Weekly Digest</h3>
-                        <p>Curated stories and updates from across NYC</p>
-                    </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-calendar-alt"></i>
-                        <h3>Event Alerts</h3>
-                        <p>Never miss out on exciting city events</p>
-                    </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-star"></i>
-                        <h3>Exclusive Content</h3>
-                        <p>Special features and behind-the-scenes stories</p>
-                    </div>
+            <div class="benefits">
+                <div class="benefit-item">
+                    <i class="fas fa-newspaper"></i>
+                    <h3>Weekly Updates</h3>
+                    <p>Get the latest stories and events delivered straight to your inbox every week.</p>
+                </div>
+                <div class="benefit-item">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <h3>Local Insights</h3>
+                    <p>Discover hidden gems and local happenings across New York City.</p>
+                </div>
+                <div class="benefit-item">
+                    <i class="fas fa-calendar-alt"></i>
+                    <h3>Event Calendar</h3>
+                    <p>Stay informed about upcoming cultural events and community gatherings.</p>
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="site-footer">
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>About Us</h3>
-                <p>NY Collective is a platform for sharing stories and connecting communities.</p>
-            </div>
-            <div class="footer-section">
-                <h3>Connect</h3>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 NY Collective. All rights reserved.</p>
-        </div>
+        <!-- Footer will be loaded dynamically -->
     </footer>
 
     <script src="script.js"></script>
